--- a/templates/keras.html
+++ b/templates/keras.html
@@ -9,11 +9,23 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 </head>
 <body>
+    <div class="menu-container">
+        <button id="menu-button">Open Menu</button>
+        <div id="side-menu" class="side-menu">
+            <!--<button id="close-menu-button">Close</button>-->
+            <h2>Menu</h2>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/keras">Keras</a></li>
+                <li><a href="/random-regression-tree">Random Regression Tree</a></li>
+            </ul>
+        </div>
+    </div>
     <div class="container">
         <div class="left-half">
             <h1 class="centerHeader">Keras Model</h1>
             <div class="input-group">
-                <label for="num-layers">Number of layers:</label>
+                <!--<label for="num-layers">Number of layers:</label>-->
                 <input type="number" id="num-layers" name="num-layers" min="0" placeholder="Enter a number">
             </div>
             <div id="layer-count" class="layer-count"></div>
@@ -25,6 +37,5 @@
         </div>
         <button id = "submit-button">Submit</button>
     </div>
-    <a href="/">Go Back</a>
 </body>
 </html>
