--- a/templates/keras.html
+++ b/templates/keras.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="csrf-token" content="{{ csrf_token() }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keras</title>
 
@@ -35,7 +36,7 @@
             <h1 class="centerHeader">Generated Code</h1>
             <pre id="generated-code"></pre>
         </div>
-        <button id = "submit-button">Submit</button>
+        <button id="submit-button" class="submit-button">Submit Model</button>
     </div>
 </body>
 </html>
